feat: add support for LZ4 compression type
Refactor code to make it easy to add new compression algorithms and add support for LZ4 compression type.

BREAKING CHANGE: Compression interface has changed from org.iq80.leveldb.util.Snappy.SPI to org.iq80.leveldb.compression.Compression interface to support other types of compressions.